# nlp

./: .dockerignore  .env.tmpl  .env_tmpl  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.ipynb_checkpoints/: topic_modelling-checkpoint.ipynb
data/: train_reviews.json
mlprague2024_ws/: .gitignore  requirements.txt
mlprague2024_ws/ntb/: 1_naive_rag_qa.ipynb  2_basic_rag_qa.ipynb  3_advanced_rag_qa.ipynb
mlprague2024_ws/src/: aws_cli.py
notebooks/: Starter-HF-Reviews-Code.ipynb  Untitled.ipynb  load_okra_data.py  topic_modelling.ipynb  topic_modelling_backup.ipynb
notebooks/.ipynb_checkpoints/: Exploring_Review_Data-checkpoint.ipynb  Starter-HF-Reviews-Code-checkpoint.ipynb  topic_modelling-checkpoint.ipynb
src/: read_data.py  setup.py
src/djangoproject/hello/migrations/: 0001_initial.py
src/djangoproject/nlp/: settings.py  urls.py
src/djangoproject/okra/: apps.py  models.py
src/djangoproject/okra/migrations/: 0001_initial.py  0002_alter_okrareviews_date.py
src/erste/: case_study_instructions.txt  features.csv  targets.csv  task.ipynb  text_features.csv
src/frontend/: manage.py
src/frontend/nlp/: asgi.py  settings.py
src/frontend/okra/: models.py
src/frontend/okra/migrations/: 0001_initial.py
src/nlp/nlp/: settings.py  urls.py  wsgi.py
src/okra/: load_okra_data.py  topic_modelling.ipynb
src/top2vec/: datamodule.py  top2vec_model_training.py
src/topicmodel/: Untitled.ipynb  config.py  datamodel.py  datamodule.py  dataset.py  queries.py  test.py  tokenizer.py  top2vec_model_training.py  topic_model.py  topic_model_training.py  utils.py
src/topicmodel/datamodule/: datamodule.py  dataset.py  tokenizers.py  utils.py
src/vacuumlabs/: second_round.ipynb  task.txt  vacuumlabs.txt
src/word2vec/: config.py  embeddings.py  model.py  model_test.py  model_training.py  topic_model.py  topic_model_training.py  training.py  word2vec_model.py  word2vec_model_training.py  word_similarity.py
src/word2vec/datamodule/: datamodule.py  dataset.py  queries.py  regexp.py  tokenizers.py  utils.py
src/word2vec/trained_models/: checkpoint  ckpt-2023-01-05-12-59-48.index  word2vec-model-v01-05-01-23-15-50.index  word2vec-model-v01-07-01-23-19-24.index  word2vec-model-v02-05-01-23-15-54.index  word2vec-model-v02-08-01-23-19-24.idx2word.pkl  word2vec-model-v02-08-01-23-19-24.index  word2vec-model-v03-05-01-23-16-10.index  word2vec-model-v04-05-01-23-15-48.index
vacuumlabs/: first_round.ipynb  input_one.txt
